--- a/flatpackassembly.html
+++ b/flatpackassembly.html
@@ -127,6 +127,7 @@
             </p>
           </div>
         </div>
+      <div class="breadcrumb__overlay"></div>
       </div>
     </section>
     <section class="furniture-assembly-wrapper">
