--- a/index.html
+++ b/index.html
@@ -279,7 +279,8 @@
     </div>
     <div class="container gallery-images">
       <div class="gallery-img1">
-        <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg" class="rotate-on-hover" />
+        <img src="https://handyhelpforhire.com.au/assets/img/gallery/bargophotos/IMG_3609.jpg"
+          class="rotate-on-hover" />
         <h4>Garden</h4>
       </div>
       <div class="gallery-img3">
@@ -338,7 +339,7 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png"/>
+            <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" />
           </div>
           <div class="footer-text">
             <p>
@@ -439,8 +440,8 @@
 
   <script>
     document.getElementById("close-btn").addEventListener("click", function () {
-        document.getElementById("check").checked = false;
-      });
+      document.getElementById("check").checked = false;
+    });
   </script>
 </body>
 
