--- a/gardenmaintenance.html
+++ b/gardenmaintenance.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Handy Help For Hire</title>
     <link rel="icon" href="https://handyhelpforhire.com.au/assets/img/white-logo.png">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.12.1/font/bootstrap-icons.min.css">
 </head>
+
 <body>
     <section class="navbar-wrapper">
         <div class="container">
             <nav class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
+                    <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png"
+                            alt=""></a>
                 </div>
-                    <input type="checkbox" id="check">
-                    <label for="check" class="checkbtn">
-                        <i class="fa fa-bars"></i>
-                    </label>
-                    <ul class="nav-ul">
-                        <button id="close-btn" class="cross white-bg-button">X</button>
-                        <li><a href="index.html">HOME</a></li>
-                         <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle service-btn active" type="button" data-bs-toggle="dropdown">
-                                SERVICES
-                            </button>
-                            <ul class="dropdown-menu drop-lists">
-                                <li><a class="dropdown-item" href="gardenmaintenance.html">GARDEN MAINTENANCE</a></li>
-                                <li><a class="dropdown-item" href="drivewaypressurecleaning.html">DRIVEWAY PRESSURE CLEANING</a></li>
-                                <li><a class="dropdown-item" href="handymanservices.html">HANDYMAN SERVICES</a></li>
-                                <li><a class="dropdown-item" href="outdoormaintenance.html">OUTDOOR MAINTENANCE</a></li>
-                                <li><a class="dropdown-item" href="flatpackassembly.html">FLATPACK ASSEMBLY</a></li>
-                            </ul>
-                        </div>
-                        <li><a href="about.html">ABOUT US</a></li>
-                        <li><a href="gallery.html">GALLERY</a></li>
-                        <li><a href="contact.html">CONTACT</a></li>
-                    </ul>
+                <input type="checkbox" id="check">
+                <label for="check" class="checkbtn">
+                    <i class="fa fa-bars"></i>
+                </label>
+                <ul class="nav-ul">
+                    <button id="close-btn" class="cross white-bg-button">X</button>
+                    <li><a href="index.html">HOME</a></li>
+                    <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle service-btn active" type="button"
+                            data-bs-toggle="dropdown">
+                            SERVICES
+                        </button>
+                        <ul class="dropdown-menu drop-lists">
+                            <li><a class="dropdown-item" href="gardenmaintenance.html">GARDEN MAINTENANCE</a></li>
+                            <li><a class="dropdown-item" href="drivewaypressurecleaning.html">DRIVEWAY PRESSURE
+                                    CLEANING</a></li>
+                            <li><a class="dropdown-item" href="handymanservices.html">HANDYMAN SERVICES</a></li>
+                            <li><a class="dropdown-item" href="outdoormaintenance.html">OUTDOOR MAINTENANCE</a></li>
+                            <li><a class="dropdown-item" href="flatpackassembly.html">FLATPACK ASSEMBLY</a></li>
+                        </ul>
+                    </div>
+                    <li><a href="about.html">ABOUT US</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
             </nav>
         </div>
     </section>
@@ -71,6 +76,7 @@
                     <p><a href="index.html">Home</a> > Services > <span>Garden Maintenance</span></p>
                 </div>
             </div>
+            <div class="breadcrumb__overlay"></div>
         </div>
     </section>
     <section class="maintenance-wrapper">
@@ -78,7 +84,9 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h2>Garden Maintenance</h2>
-                    <p>Garden Maintenance is the regular care and upkeep of outdoor spaces to keep them healthy, tidy and visually appealing. It involves tasks like lawn mowing, weeding, pruning, hedge trimming, fertilizing, and general clean-ups.</p>
+                    <p>Garden Maintenance is the regular care and upkeep of outdoor spaces to keep them healthy, tidy
+                        and visually appealing. It involves tasks like lawn mowing, weeding, pruning, hedge trimming,
+                        fertilizing, and general clean-ups.</p>
                     <div class="row">
                         <div class="col-lg-6 outer">Lawn Mowing & Edging</div>
                         <div class="col-lg-6 outer">Weeding & Pruning</div>
@@ -145,7 +153,14 @@
             </div>
             <div class="quote-right">
                 <h2>Keeping Your Outdoor Space Thriving</h2>
-                <p>A lush, healthy garden starts with the right care! At Handy Help For Hire, we make garden maintenance easy with: <br><br> <i class="fa-solid fa-check"></i> Regular Upkeep – Mowing, pruning & weeding for a tidy space. <br> <i class="fa-solid fa-check"></i> Seasonal Care - Keeping plants healthy all year round <br> <i class="fa-solid fa-check"></i> Pest & Disease Control - Stopping issues before they spread. <br> <i class="fa-solid fa-check"></i> Sustainable Practices - Water-wise gardening & decorstive touches <br> <i class="fa-solid fa-check"></i> Landscape Enhancements - Fresh plantings & decorative touches. <br><br> Let Handy Help For Hire handle the tough tasks while you sit back and enjoy a vibrant, well-maintained garden without the hassle!</p>
+                <p>A lush, healthy garden starts with the right care! At Handy Help For Hire, we make garden maintenance
+                    easy with: <br><br> <i class="fa-solid fa-check"></i> Regular Upkeep – Mowing, pruning & weeding for
+                    a tidy space. <br> <i class="fa-solid fa-check"></i> Seasonal Care - Keeping plants healthy all year
+                    round <br> <i class="fa-solid fa-check"></i> Pest & Disease Control - Stopping issues before they
+                    spread. <br> <i class="fa-solid fa-check"></i> Sustainable Practices - Water-wise gardening &
+                    decorstive touches <br> <i class="fa-solid fa-check"></i> Landscape Enhancements - Fresh plantings &
+                    decorative touches. <br><br> Let Handy Help For Hire handle the tough tasks while you sit back and
+                    enjoy a vibrant, well-maintained garden without the hassle!</p>
                 <a href="contact.html"><button class="white-bg-button">Get a free quote</button></a>
             </div>
         </div>
@@ -158,32 +173,56 @@
                         <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt="">
                     </div>
                     <div class="footer-text">
-                        <p>We pride ourselves on providing exceptional service to busy individuals, who need a helping hand around the home. Our team is friendly, approachable, and focused on delivering the highest quality work--no job is too small for us!</p>
+                        <p>We pride ourselves on providing exceptional service to busy individuals, who need a helping
+                            hand around the home. Our team is friendly, approachable, and focused on delivering the
+                            highest quality work--no job is too small for us!</p>
                     </div>
                 </div>
                 <div class="footer-mid">
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <h4>QUICK LINKS</h4>
-                            <a href="index.html"><p>Home</p></a>
-                            <a href="about.html"><p>About Us</p></a>
-                            <a href="gallery.html"><p>Gallery</p></a>
-                            <a href="contact.html"><p>Contact Us</p></a>
+                            <a href="index.html">
+                                <p>Home</p>
+                            </a>
+                            <a href="about.html">
+                                <p>About Us</p>
+                            </a>
+                            <a href="gallery.html">
+                                <p>Gallery</p>
+                            </a>
+                            <a href="contact.html">
+                                <p>Contact Us</p>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>USEFUL LINKS</h4>
                             <p>Search</p>
                             <p>FAQS</p>
-                            <a href="about.html"><p>Our Vision</p></a>
-                            <a href="contact.html"><p>Book Now</p></a>
+                            <a href="about.html">
+                                <p>Our Vision</p>
+                            </a>
+                            <a href="contact.html">
+                                <p>Book Now</p>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>OUR SERVICES</h4>
-                            <a href="gardenmaintenance.html"><p>Garden Maintenance</p></a>
-                            <a href="drivewaypressurecleaning.html"><p>Driveway Pressure Cleaning</p></a>
-                            <a href="handymanservices.html"><p>Handyman Services</p></a>
-                            <a href="outdoormaintenance.html"><p>Outdoor Maintenance</p></a>
-                            <a href="flatpackassembly.html"><p>Flatpack Assembly</p></a>
+                            <a href="gardenmaintenance.html">
+                                <p>Garden Maintenance</p>
+                            </a>
+                            <a href="drivewaypressurecleaning.html">
+                                <p>Driveway Pressure Cleaning</p>
+                            </a>
+                            <a href="handymanservices.html">
+                                <p>Handyman Services</p>
+                            </a>
+                            <a href="outdoormaintenance.html">
+                                <p>Outdoor Maintenance</p>
+                            </a>
+                            <a href="flatpackassembly.html">
+                                <p>Flatpack Assembly</p>
+                            </a>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <h4>CONTACTS</h4>
@@ -191,7 +230,9 @@
                             <p>0427 417 447</p>
                             <p>EMAIL</p>
                             <p>handyhelpforhire@gmail.com</p>
-                            <p><i class="bi bi-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-instagram"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-twitter-x"></i></p>
+                            <p><i class="bi bi-facebook"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i
+                                    class="bi bi-instagram"></i>&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-twitter-x"></i>
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -214,22 +255,23 @@
         </footer>
     </section>
 
-    
+
 
     <script>
         const needHelpBtn = document.getElementById('needHelpBtn');
         const needHelpForm = document.getElementById('needHelpForm');
 
-        needHelpBtn.addEventListener('click', ()=>{
-          needHelpForm.classList.toggle('hidden');
+        needHelpBtn.addEventListener('click', () => {
+            needHelpForm.classList.toggle('hidden');
         })
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        document.getElementById('close-btn').addEventListener('click', function() {
-        document.getElementById('check').checked = false;
+        document.getElementById('close-btn').addEventListener('click', function () {
+            document.getElementById('check').checked = false;
         });
     </script>
 </body>
+
 </html>
