--- a/outdoormaintenance.html
+++ b/outdoormaintenance.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Handy Help For Hire</title>
+    <title>Outdoor Maintenance | Handy Help For Hire</title>
     <link rel="icon" href="https://handyhelpforhire.com.au/assets/img/white-logo.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
