footer links updated

--- a/handymanservices.html
+++ b/handymanservices.html
@@ -15,8 +15,7 @@
         <div class="container">
             <nav class="nav-container">
                 <div class="nav-logo">
-                    <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png"
-                            alt=""></a>
+                    <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png"></a>
                 </div>
                 <input type="checkbox" id="check">
                 <label for="check" class="checkbtn">
