--- a/flatpackassembly.html
+++ b/flatpackassembly.html
@@ -269,10 +269,7 @@
         <div class="container">
           <div class="footer-top">
             <div class="footer-logo">
-              <img
-                src="https://handyhelpforhire.com.au/assets/img/white-logo.png"
-                alt=""
-              />
+              <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""/></a>
             </div>
             <div class="footer-text">
               <p>
