--- a/gardenmaintenance.html
+++ b/gardenmaintenance.html
@@ -32,8 +32,7 @@
                         </button>
                         <ul class="dropdown-menu drop-lists">
                             <li><a class="dropdown-item" href="gardenmaintenance.html">GARDEN MAINTENANCE</a></li>
-                            <li><a class="dropdown-item" href="drivewaypressurecleaning.html">DRIVEWAY PRESSURE
-                                    CLEANING</a></li>
+                            <li><a class="dropdown-item" href="drivewaypressurecleaning.html">DRIVEWAY PRESSURE CLEANING</a></li>
                             <li><a class="dropdown-item" href="handymanservices.html">HANDYMAN SERVICES</a></li>
                             <li><a class="dropdown-item" href="outdoormaintenance.html">OUTDOOR MAINTENANCE</a></li>
                             <li><a class="dropdown-item" href="flatpackassembly.html">FLATPACK ASSEMBLY</a></li>
@@ -168,7 +167,7 @@
             <div class="container">
                 <div class="footer-top">
                     <div class="footer-logo">
-                        <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt="">
+                        <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                     </div>
                     <div class="footer-text">
                         <p>We pride ourselves on providing exceptional service to busy individuals, who need a helping
