--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           class="rotate-on-hover" />
         <h4>Garden</h4>
       </div>
-      <div class="gallery-img3">
+      <div class="gallery-img2">
         <img src="https://handyhelpforhire.com.au/assets/img/gallery/gallery-2.webp" class="rotate-on-hover" />
         <h4>Painting</h4>
       </div>
@@ -337,7 +337,7 @@
       <div class="container">
         <div class="footer-top">
           <div class="footer-logo">
-            <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" />
+            <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" /></a>
           </div>
           <div class="footer-text">
             <p>
