footer links added

--- a/outdoormaintenance.html
+++ b/outdoormaintenance.html
@@ -161,7 +161,7 @@
             <div class="container">
                 <div class="footer-top">
                     <div class="footer-logo">
-                        <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt="">
+                        <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                     </div>
                     <div class="footer-text">
                         <p>We pride ourselves on providing exceptional service to busy individuals, who need a helping hand around the home. Our team is friendly, approachable, and focused on delivering the highest quality work--no job is too small for us!</p>
