--- a/handymanservices.html
+++ b/handymanservices.html
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="footer-top">
                     <div class="footer-logo">
-                        <img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt="">
+                        <a href="index.html"><img src="https://handyhelpforhire.com.au/assets/img/white-logo.png" alt=""></a>
                     </div>
                     <div class="footer-text">
                         <p>We pride ourselves on providing exceptional service to busy individuals, who need a helping
